--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <version>1.18.38</version>
     </dependency>
 
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <version>2.25.1</version>
+          <scope>compile</scope>
+      </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
