--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,17 +1,17 @@
-rootLogger.level = debug
-rootLogger.appenderRefs = stdout
-rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.level=INFO
+rootLogger.appenderRefs=stdout
+rootLogger.appenderRef.stdout.ref=STDOUT
 
-appender.stdout.type = Console
-appender.stdout.name = STDOUT
-appender.stdout.layout.type = PatternLayout
-appender.stdout.layout.pattern = %d{HH:mm:ss,SSS} %-5p [%c] - %m%n
+appender.stdout.type=Console
+appender.stdout.name=STDOUT
+appender.stdout.layout.type=PatternLayout
+appender.stdout.layout.pattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
 
-logger.hibernate.name = org.hibernate
-logger.hibernate.level = info
+#logger.hibernate.name=org.hibernate
+#logger.hibernate.level=info
 
-logger.hibernateSQL.name = org.hibernate.SQL
-logger.hibernateSQL.level = debug
+logger.hibernateSQL.name=org.hibernate.SQL
+logger.hibernateSQL.level=debug
 
-logger.hibernateStat.name = org.hibernate.stat
-logger.hibernateStat.level = debug
+logger.hibernateStat.name=org.hibernate.stat
+logger.hibernateStat.level=debug
